<resources>
    <string name="app_name">Project Crawfish</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="parse_app_id">zZ00GLyDLVPJVen8KHQUpiGx2eAKbg8EUajBz87H</string>
    <string name="parse_client_key">0rGGU81Rr8elNfvTq2e64Uque11lvYGPoxImCEN1</string>
    <string name="facebook_app_id">1606049642985679</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_hint">Description</string>
    <string name="location_hint">Location</string>
    <string name="end_date_label">End</string>
    <string name="start_date_label">Start</string>
    <string name="all_day_label">All Day</string>
    <string name="event_title_hint">Event Title</string>
    <string name="event_options_picker_title">See Connections or Go Through Deck</string>
    <string name="title_activity_new_event">NewEventActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_me_fragment">MeFragment</string>
    <string name="title_activity_card_swipe">CardSwipeActivity</string>
    <string name="activity_contacts">ContactActivity</string>
    <string name="contact_photo">contactPhoto</string>
    <string name="contact_name_label">contactNameLabel</string>
    <string name="contact_position_label">contactPositionLabel</string>
    <string name="contact_number_label">contactNumberLabel</string>
    <string name="contact_email_label">contactEmailLabel</string>
    <string name="fb_logo">fbLogo</string>
    <string name="linkedin_logo">linkedInLogo</string>

    <string name="contact_activity_list">ContactListActivity</string>
    <string name="contact_details_label">Position</string>
    <string name="edit">editButton</string>

    <string name="font_name_lato">Lato-Light</string>
    <string name="style_bold">bold</string>
    <string name="style_italic">italic</string>

    <string name="name_hint">Name</string>
    <string name="position_hint">Position</string>
    <string name="email_hint">Email</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="past_event_view_connections">View Connections</string>
    <string name="past_event_view_deck">Go Through \nAttendee Deck</string>
    <string name="check_in_button">Check In!</string>
    <string name="attending_string">You are attending:</string>
    <string name="leave_early_string">Leave Early</string>
    <string name="new_connections_notification">You have new connections!</string>
    <string name="action_new_event">New Event</string>
    <string name="action_search">Search</string>
    <string name="new_event_save_button_text">save</string>
    <string name="my_profile_button">My Profile</string>
    <string name="logout_button_text">Logout</string>
    <string name="title_activity_bluetooth_test">BluetoothTestActivity</string>
    <string name="select_picture">Select Picture</string>
    <string name="msg_failed_to_get_intent_data">Failed to get intent data</string>


</resources>
