<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginBottom="24dp"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:layout_marginTop="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.facebook.android.projectcrawfish.CustomFontEditText
            android:id="@+id/event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_title_hint"
            android:ellipsize="end"
            android:singleLine="true"
            android:textSize="20sp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_clock"
                android:id="@+id/clock_icon"/>

            <com.facebook.android.projectcrawfish.CustomFontTextView
                android:layout_toRightOf="@id/clock_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_day_label"
                android:layout_centerVertical="true"
                />

            <Switch
                android:id="@+id/all_day_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp">

            <com.facebook.android.projectcrawfish.CustomFontTextView
                android:id="@+id/start_label"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="56dp"
                android:text="@string/start_date_label"/>

            <com.facebook.android.projectcrawfish.CustomFontButton
                android:id="@+id/start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_toRightOf="@id/start_label"
                tools:text="MON, SEP 7, 2018"
                android:textSize="12sp"
                style="?android:attr/borderlessButtonStyle"
                />

            <com.facebook.android.projectcrawfish.CustomFontButton
                android:id="@+id/start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                tools:text="12:00 PM"
                android:textSize="12sp"
                style="?android:attr/borderlessButtonStyle"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp">

            <com.facebook.android.projectcrawfish.CustomFontTextView
                android:id="@+id/end_label"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="56dp"
                android:text="@string/end_date_label"/>

            <com.facebook.android.projectcrawfish.CustomFontButton
                android:id="@+id/end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_toRightOf="@id/end_label"
                tools:text="MON, SEP 7, 2018"
                android:textSize="12sp"
                style="?android:attr/borderlessButtonStyle"
                />

            <com.facebook.android.projectcrawfish.CustomFontButton
                android:id="@+id/end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                tools:text="1:00 PM"
                android:textSize="12sp"
                style="?android:attr/borderlessButtonStyle"
                />
        </RelativeLayout>

        <View
            android:layout_marginTop="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="8dp"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_location"
                android:id="@+id/location_icon"/>

            <com.facebook.android.projectcrawfish.CustomFontEditText
                android:id="@+id/location"
                android:layout_toRightOf="@id/location_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location_hint"
                android:layout_centerVertical="true"
                android:ellipsize="end"
                android:singleLine="true"
                />
        </RelativeLayout>

        <View
            android:layout_marginTop="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="8dp"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_text"
                android:id="@+id/text_icon"/>

            <com.facebook.android.projectcrawfish.CustomFontEditText
                android:id="@+id/description"
                android:layout_toRightOf="@id/text_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/description_hint"
                android:layout_centerVertical="true"
                android:gravity="top"
                />
        </RelativeLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>
