<android.support.v7.widget.CardView
    android:id="@+id/actual_card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:layout_marginTop="16dp"
    cardview:cardCornerRadius="8dp"
    cardview:cardElevation="16dp"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="fill_vertical">

                <ImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="8dp"
                    android:background="@android:color/darker_gray"
                    android:contentDescription="@string/contact_photo"
                    android:cropToPadding="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp">

                <android.widget.IconTextView
                    android:id="@+id/name_icon"
                    android:layout_width="56dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="{fa_user}"
                    android:textColor="@color/editButton"
                    android:textSize="24dp"/>

                <TextView
                    android:id="@+id/contact_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/name_icon"
                    android:ellipsize="end"
                    tools:text="@string/name_hint"
                    android:singleLine="true"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp">

                <android.widget.IconTextView
                    android:id="@+id/position_icon"
                    android:layout_width="56dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="{fa_suitcase}"
                    android:textColor="@color/editButton"
                    android:textSize="24dp"/>

                <TextView
                    android:id="@+id/contact_position"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/position_icon"
                    android:ellipsize="end"
                    tools:text="@string/position_hint"
                    android:singleLine="true"
                    />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp">

                <android.widget.IconTextView
                    android:id="@+id/email_icon"
                    android:layout_width="56dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="{fa_envelope_o}"
                    android:textColor="@color/editButton"
                    android:textSize="24dp"/>

                <TextView
                    android:id="@+id/contact_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/email_icon"
                    android:ellipsize="end"
                    tools:text="@string/email_hint"
                    android:singleLine="true"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp">

                <android.widget.IconTextView
                    android:id="@+id/number_icon"
                    android:layout_width="56dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="{fa_phone}"
                    android:textColor="@color/editButton"
                    android:textSize="24dp"/>

                <TextView
                    android:id="@+id/contact_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/number_icon"
                    android:gravity="top"
                    tools:text="@string/phone_number_hint"
                    android:singleLine="true"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_vertical"
                >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">

                    <android.widget.IconButton
                        android:id="@+id/contact_fb"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="{fa_facebook_square}"
                        android:textColor="@color/fb"
                        android:textSize="48dp"/>

                    <android.widget.IconButton
                        android:id="@+id/contact_linkedin"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/contact_fb"
                        android:gravity="center"
                        android:text="{fa_linkedin_square}"
                        android:textColor="@color/linkedIn"
                        android:textSize="48dp"/>
                </RelativeLayout>
            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
